re-factoring: fix cpd warning related to capture line piece algo